--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "allupdate": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
-    "nuxt3": "3.0.0-27258467.4e424d0"
+    "@unocss/preset-icons": "^0.4.7",
+    "nuxt3": "3.0.0-27258467.4e424d0",
+    "unocss": "^0.4.7"
   }
 }
