--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "allupdate": "yarn upgrade-interactive --latest"
   },
   "devDependencies": {
-    "nuxt3": "3.0.0-27258467.4e424d0"
+    "@types/isomorphic-fetch": "0.0.35",
+    "nuxt-windicss": "2.0.11",
+    "nuxt3": "3.0.0-27265876.3cd4494"
+  },
+  "dependencies": {
+    "@apollo/client": "3.4.16",
+    "@vue/apollo-composable": "4.0.0-alpha.15",
+    "graphql": "16.0.1",
+    "graphql-tag": "2.12.5",
+    "isomorphic-fetch": "3.0.0"
   }
 }
