--- a/codegen.yml
+++ b/codegen.yml
@@ -14,4 +14,4 @@ generates:
       - typescript-operations
       - typescript-vue-apollo
     config:
-      withCompositionFunctions: true
+      vueCompositionApiImportFrom: vue
