--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "allupdate": "yarn upgrade-interactive --latest",
-    "ts": "graphql-codegen --config codegen.yml"
+    "ts": "graphql-codegen --config codegen.yml",
+    "storybook": "start-storybook -p 6006 -s ./public,./assets && postcss:watch",
+    "build-storybook": "yarn postcss:prod && build-storybook"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.2.2",
@@ -15,12 +17,18 @@
     "@graphql-codegen/typescript-graphql-files-modules": "2.1.0",
     "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-vue-apollo": "3.2.0",
+    "@storybook/addon-essentials": "6.3.12",
+    "@storybook/addon-links": "6.3.12",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/vue3": "6.3.12",
     "@types/isomorphic-fetch": "0.0.35",
     "autoprefixer": "10.4.0",
     "nuxt-windicss": "2.0.11",
     "nuxt3": "3.0.0-27276275.abfbd2f",
     "postcss": "8.3.11",
-    "tailwindcss": "3.0.0-alpha.2"
+    "tailwindcss": "3.0.0-alpha.2",
+    "storybook-builder-vite": "0.1.5",
+    "storybook-dark-mode": "1.0.8"
   },
   "dependencies": {
     "@apollo/client": "3.4.16",
