--- a/package.json
+++ b/package.json
@@ -1,40 +1,18 @@
 {
-  "private": true,
+  "name": "productdevbook",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "node .output/server/index.mjs",
-    "allupdate": "yarn upgrade-interactive --latest",
-    "ts": "graphql-codegen --config codegen.yml",
-    "storybook": "start-storybook -p 6006 -s ./public,./assets && postcss:watch",
-    "build-storybook": "yarn postcss:prod && build-storybook"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "2.2.2",
-    "@graphql-codegen/introspection": "2.1.0",
-    "@graphql-codegen/schema-ast": "2.4.0",
-    "@graphql-codegen/typescript": "2.3.1",
-    "@graphql-codegen/typescript-graphql-files-modules": "2.1.0",
-    "@graphql-codegen/typescript-operations": "2.2.0",
-    "@graphql-codegen/typescript-vue-apollo": "3.2.0",
-    "@storybook/addon-essentials": "6.3.12",
-    "@storybook/addon-links": "6.3.12",
-    "@storybook/addon-postcss": "2.0.0",
-    "@storybook/vue3": "6.3.12",
-    "@types/isomorphic-fetch": "0.0.35",
-    "autoprefixer": "10.4.0",
-    "nuxt-windicss": "2.0.11",
-    "nuxt3": "3.0.0-27276275.abfbd2f",
-    "postcss": "8.3.11",
-    "tailwindcss": "3.0.0-alpha.2",
-    "storybook-builder-vite": "0.1.5",
-    "storybook-dark-mode": "1.0.8"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "3.4.16",
-    "@vue/apollo-composable": "4.0.0-alpha.15",
-    "graphql": "16.0.1",
-    "graphql-tag": "2.12.5",
-    "isomorphic-fetch": "3.0.0"
+    "vue": "^3.2.25"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^2.0.0",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vue-tsc": "^0.29.8"
   }
 }
