--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
+  },
+  "engines": {
+    "node": ">=16.11.0"
   }
 }
