--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "3.2.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "@vitejs/plugin-vue": "2.0.0",
+    "autoprefixer": "10.4.0",
+    "postcss": "8.4.5",
+    "sass": "1.45.1",
+    "tailwindcss": "3.0.7",
+    "typescript": "4.4.4",
+    "vite": "2.7.2",
+    "vue-tsc": "0.29.8"
   },
   "engines": {
     "node": "^16.0.0"
