--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "unocss": "0.16.1",
     "vue": "3.2.26"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "@unocss/preset-icons": "0.16.1",
+    "@vue/eslint-config-prettier": "6.0.0",
+    "@vue/eslint-config-typescript": "9.1.0",
     "@vitejs/plugin-vue": "2.0.1",
     "autoprefixer": "10.4.0",
+    "eslint": "8.4.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-tailwindcss": "1.17.2",
+    "eslint-plugin-vue": "8.2.0",
     "postcss": "8.4.5",
+    "prettier": "2.5.1",
     "sass": "1.45.1",
     "tailwindcss": "3.0.7",
     "typescript": "4.5.4",
