--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "lint": "eslint \"**/*.{vue,ts,js}\""
   },
   "dependencies": {
     "unocss": "0.16.1",
@@ -23,6 +25,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-tailwindcss": "1.17.2",
     "eslint-plugin-vue": "8.2.0",
+    "husky": "7.0.4",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
     "sass": "1.45.1",
