--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
   },
   "extends": [
     "plugin:vue/vue3-recommended",
+    "plugin:vue/vue3-essential",
+    "plugin:vue/vue3-strongly-recommended",
     "eslint:recommended",
     "@vue/typescript/recommended",
     // Add under other rules
@@ -24,7 +26,7 @@
     "tailwindcss/classnames-order": "warn",
     "tailwindcss/no-custom-classname": "off",
     "tailwindcss/no-contradicting-classname": "off",
-    
+
     "linebreak-style": ["error", "unix"],
     "import/no-unresolved": "off",
     "import/extensions": "off",
@@ -32,6 +34,7 @@
     "no-async-promise-executor": "off",
     "import/no-extraneous-dependencies": "off",
     "vue/multi-word-component-names": 0,
+    "vue/script-setup-uses-vars": "error",
     // "vue/no-multiple-template-root": "off",
     // "vue/html-self-closing": "off",
     "vue/no-v-html": 0,
@@ -41,13 +44,16 @@
     "no-bitwise": "off",
     "@typescript-eslint/explicit-module-boundary-types": ["off"],
     "@typescript-eslint/ban-ts-comment": ["off"],
-    // "vue/no-setup-props-destructure": ["off"],
+    "vue/no-setup-props-destructure": ["off"],
     "@typescript-eslint/no-empty-function": ["off"],
     //can config to 2 if need more then required
     "@typescript-eslint/no-unused-vars": [0],
     "no-param-reassign": ["off"],
-    "vue/valid-v-slot": ["error", {
-      "allowModifiers": true
-    }]
+    "vue/valid-v-slot": [
+      "error",
+      {
+        "allowModifiers": true
+      }
+    ]
   }
 }
