--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint \"**/*.{vue,ts,js}\""
   },
   "dependencies": {
+    "@apollo/client": "3.5.6",
+    "@vue/apollo-composable": "4.0.0-alpha.16",
+    "graphql": "16.1.0",
+    "graphql-tag": "2.12.6",
     "unocss": "0.16.1",
     "vue": "3.2.26"
   },
