--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "vue": "3.2.26"
   },
   "devDependencies": {
+    "@types/node": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
     "@unocss/preset-icons": "0.16.1",
+    "@vitejs/plugin-vue": "2.0.1",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "9.1.0",
-    "@vitejs/plugin-vue": "2.0.1",
     "autoprefixer": "10.4.0",
     "eslint": "8.4.1",
     "eslint-config-prettier": "8.3.0",
