--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "productdevbook",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "private": true,
+  "author": "productdevbook <hi@productdevbook.com> (https://productdevbook.com)",
+
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
