--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "graphql": "16.1.0",
     "graphql-tag": "2.12.6",
     "unocss": "0.16.1",
-    "vue": "3.2.26"
+    "vue": "3.2.26",
+    "vue-router": "4.0.12"
   },
   "devDependencies": {
-    "@types/node": "^17.0.2",
+    "@types/node": "17.0.2",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
     "@unocss/preset-icons": "0.16.1",
@@ -47,7 +48,7 @@
     "tailwindcss": "3.0.7",
     "typescript": "4.5.4",
     "vite": "2.7.4",
-    "vite-plugin-pages": "^0.19.6",
+    "vite-plugin-pages": "0.19.6",
     "vue-tsc": "0.30.0"
   },
   "engines": {
