--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "typescript": "4.5.4",
     "vite": "2.7.4",
     "vite-plugin-pages": "0.19.6",
+    "vite-plugin-vue-layouts": "0.5.0",
     "vue-tsc": "0.30.0"
   },
   "engines": {
