--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 3001",
     "prepare": "husky install",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
     "ts": "graphql-codegen --config codegen.yml"
