--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
     "@graphql-codegen/typescript-operations": "2.2.3",
     "@graphql-codegen/typescript-vue-apollo": "3.2.3",
+    "@tauri-apps/api": "1.0.0-beta.8",
     "@vue/apollo-composable": "4.0.0-alpha.16",
     "graphql": "16.3.0",
     "graphql-tag": "2.12.6",
@@ -29,6 +30,7 @@
     "vue-router": "4.0.12"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "1.0.0-beta.10",
     "@types/node": "17.0.2",
     "@types/nprogress": "0.2.0",
     "@typescript-eslint/eslint-plugin": "5.10.2",
