--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview --port 3001",
     "prepare": "husky install",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
-    "ts": "graphql-codegen --config codegen.yml"
+    "ts": "graphql-codegen --config codegen.yml",
+    "app-dev": "tauri dev",
+    "app-build": "cross-env vite build && tauri build"
   },
   "dependencies": {
     "@apollo/client": "3.5.8",
@@ -40,6 +42,7 @@
     "@vue/eslint-config-prettier": "7.0.0",
     "@vue/eslint-config-typescript": "10.0.0",
     "autoprefixer": "10.4.2",
+    "cross-env": "7.0.3",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
