--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview --port 3001",
     "prepare": "husky install",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
-    "ts": "graphql-codegen --config codegen.yml"
+    "ts": "graphql-codegen --config codegen.yml",
+    "app-dev": "tauri dev",
+    "app-build": "cross-env vite build && tauri build"
   },
   "dependencies": {
     "@apollo/client": "3.5.8",
@@ -20,6 +22,7 @@
     "@graphql-codegen/typescript-graphql-files-modules": "2.1.1",
     "@graphql-codegen/typescript-operations": "2.2.3",
     "@graphql-codegen/typescript-vue-apollo": "3.2.3",
+    "@tauri-apps/api": "1.0.0-beta.8",
     "@vue/apollo-composable": "4.0.0-alpha.16",
     "graphql": "16.3.0",
     "graphql-tag": "2.12.6",
@@ -29,6 +32,7 @@
     "vue-router": "4.0.12"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "1.0.0-beta.10",
     "@types/node": "17.0.2",
     "@types/nprogress": "0.2.0",
     "@typescript-eslint/eslint-plugin": "5.10.2",
@@ -38,6 +42,7 @@
     "@vue/eslint-config-prettier": "7.0.0",
     "@vue/eslint-config-typescript": "10.0.0",
     "autoprefixer": "10.4.2",
+    "cross-env": "7.0.3",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
