monorepo vue transport

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ dist-ssr
 *.local
 *.log
 .env
+
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
