--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nestjs-graphql",
+  "name": "api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "productdevbook <hi@productdevbook.com> (https://productdevbook.com)",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
