--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "author": "productdevbook <hi@productdevbook.com> (https://productdevbook.com)",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 3001",
-    "prepare": "husky install",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
     "ts": "graphql-codegen --config codegen.yml",
     "app-dev": "tauri dev",
