--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
 node_modules
-.DS_Store
-dist
-dist-ssr
-*.local
 *.log
+.nuxt
+nuxt.d.ts
+.output
 .env
-
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
