--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "devDependencies": {
     "nuxt3": "latest"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "apollo-server-micro": "^3.6.6",
+    "graphql": "^16.3.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1"
+  }
 }
