--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
+    "@graphql-yoga/node": "2.0.0",
     "apollo-server-micro": "3.6.6",
     "graphql": "16.3.0",
     "micro": "9.3.4",
