--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
   "devDependencies": {
     "@nuxtjs/supabase": "0.1.4",
     "@nuxtjs/tailwindcss": "5.0.2",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "8.3.4",
     "nuxt3": "3.0.0-27479058.e4956c5"
   },
   "packageManager": "yarn@3.2.0",
   "dependencies": {
-    "@envelop/core": "^2.2.0",
+    "@envelop/core": "2.2.0",
     "@graphql-yoga/node": "2.0.0",
     "apollo-server-micro": "3.6.6",
-    "class-validator": "^0.13.2",
-    "graphql": "^15.3.0",
+    "class-validator": "0.13.2",
+    "graphql": "15.3.0",
     "micro": "9.3.4",
     "micro-cors": "0.1.1",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.4"
+    "pg": "8.7.3",
+    "pg-native": "3.0.0",
+    "reflect-metadata": "0.1.13",
+    "type-graphql": "1.1.1",
+    "typeorm": "0.3.4"
   }
 }
