feat: change nuxt content and docus

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 node_modules
-*.log
+*.iml
+.idea
+*.log*
 .nuxt
-nuxt.d.ts
-.output
+.vscode
+.DS_Store
+coverage
+dist
+sw.*
 .env
-
-.yarn/*
-!.yarn/patches
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
+.output
