--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "allupdate": "yarn upgrade-interactive"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "5.1.2",
+    "@docus/docs-theme": "npm:@docus/docs-theme-edge@latest",
+    "@docus/github": "npm:@docus/github-edge@latest",
+    "monaco-editor-core": "0.33.0",
     "nuxt": "3.0.0-rc.3"
   },
   "packageManager": "yarn@3.2.1",
   "dependencies": {
     "@graphql-yoga/node": "2.8.0",
-    "apollo-server-micro": "3.8.1",
+    "@typescript/ata": "0.9.3",
+    "apollo-server-micro": "3.8.2",
+    "emmet-monaco-es": "5.1.0",
     "graphql": "16.5.0",
     "micro": "9.3.4",
-    "micro-cors": "0.1.1"
+    "micro-cors": "0.1.1",
+    "xterm": "4.18.0"
   }
 }
