--- a/renovate.json
+++ b/renovate.json
@@ -1,54 +1,4 @@
 {
   "extends": ["config:base", "@nuxtjs"],
-  "labels": ["dependencies"],
-  "packageRules": [
-    {
-      "groupName": "Types",
-      "packagePatterns": ["^@types/"],
-      "automerge": true
-    },
-    {
-      "matchDatasources": ["npm"],
-      "matchUpdateTypes": ["major"],
-      "groupName": "NPM dependencies (major)"
-    },
-    {
-      "matchDatasources": ["npm"],
-      "matchUpdateTypes": ["minor", "patch"],
-      "groupName": "NPM dependencies (non-major)"
-    },
-    {
-      "packageNames": [
-        "unocss",
-        "@unocss/preset-icons",
-        "@unocss/nuxt",
-        "@unocss/preset-icons"
-      ],
-      "groupName": "Uno CSS packages"
-    },
-    {
-      "packageNames": [
-        "@storybook/vue3",
-        "@storybook/addon-a11y",
-        "@storybook/addon-essentials",
-        "@storybook/addon-a11y",
-        "@storybook/addon-links",
-        "storybook-builder-vite",
-        "storybook-dark-mode",
-        "storybook-vue3-router"
-      ],
-      "groupName": "Storybook packages"
-    },
-    {
-      "packageNames": ["@​iconify-json/mdi", "@​iconify-json/fluent"],
-      "groupName": "Icons packages"
-    },
-    {
-      "packageNames": ["vue-imgix"],
-      "groupName": "Images packages"
-    }
-  ],
-  "lockFileMaintenance": {
-    "enabled": true
-  }
+  "labels": ["dependencies"]
 }
