--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
-    "allupdate": "yarn upgrade-interactive"
+    "allupdate": "pnpm update --interactive --latest"
   },
   "devDependencies": {
     "@docus/base": "npm:@docus/base-edge@latest",
     "@docus/docs-theme": "npm:@docus/docs-theme-edge@latest",
     "@docus/github": "npm:@docus/github-edge@latest",
-    "nuxt": "3.0.0-rc.4"
+    "nuxt": "3.0.0-rc.6"
   },
   "dependencies": {
-    "@graphql-yoga/node": "2.8.0",
+    "@graphql-yoga/node": "2.13.4",
     "@typescript/ata": "0.9.3",
-    "apollo-server-micro": "3.8.2",
+    "apollo-server-micro": "3.10.0",
     "emmet-monaco-es": "5.1.0",
     "graphql": "16.5.0",
-    "micro": "9.3.4",
+    "micro": "9.4.0",
     "micro-cors": "0.1.1",
-    "xterm": "4.18.0"
+    "xterm": "4.19.0"
   },
   "resolutions": {
     "@vercel/nft": "0.18.2"
