--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 node_modules
-*.iml
-.idea
-*.log*
+*.log
 .nuxt
-.vscode
-.DS_Store
-coverage
-dist
-sw.*
-.env
+nuxt.d.ts
 .output
+.idea
+
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.env
