--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,10 @@
 {
-    "recommendations": [
-        "dbaeumer.vscode-eslint",
-        "esbenp.prettier-vscode",
-        "bradlc.vscode-tailwindcss",
-        "tauri-apps.tauri-vscode",
-        "redhat.vscode-yaml",
-        "graphql.vscode-graphql",
-        "johnsoncodehk.volar"
-    ]
+  "recommendations": [
+    "bradlc.vscode-tailwindcss",
+    "vue.volar",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "csstools.postcss",
+    "antfu.iconify"
+  ]
 }
