--- a/package.json
+++ b/package.json
@@ -1,34 +1,46 @@
 {
   "private": true,
-  "author": "productdevbook<hi@productdevbook.com>",
-  "version": "0.2.0",
-  "license": "MIT",
-  "description": "There are many developers who develop the best product and cannot make themselves heard. They will now be able to announce them and the best libraries to developers.",
-  "productName": "Product Dev Book",
-  "homepage": "https://productdevbook.com",
+  "packageManager": "yarn@3.3.0",
+  "engines": {
+    "node": "^16.11.0 || ^17.0.0 || || ^18.0.0"
+  },
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build",
+    "generate": "nuxi generate",
     "start": "node .output/server/index.mjs",
-    "allupdate": "yarn upgrade-interactive"
-  },
-  "devDependencies": {
-    "@docus/base": "npm:@docus/base-edge@latest",
-    "@docus/docs-theme": "npm:@docus/docs-theme-edge@latest",
-    "@docus/github": "npm:@docus/github-edge@latest",
-    "nuxt": "3.0.0-rc.4"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@graphql-yoga/node": "2.8.0",
-    "@typescript/ata": "0.9.3",
-    "apollo-server-micro": "3.8.2",
-    "emmet-monaco-es": "5.1.0",
-    "graphql": "16.5.0",
-    "micro": "9.3.4",
-    "micro-cors": "0.1.1",
-    "xterm": "4.18.0"
+    "@headlessui/vue": "1.7.4",
+    "@huntersofbook/plausible-nuxt": "^0.5.2",
+    "@nuxtjs/i18n": "8.0.0-beta.4",
+    "@pinia/nuxt": "0.4.5",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.8",
+    "pinia": "2.0.26"
   },
-  "resolutions": {
-    "@vercel/nft": "0.18.2"
+  "devDependencies": {
+    "@antfu/eslint-config": "0.31.0",
+    "@iconify-json/carbon": "1.1.11",
+    "@iconify-json/ic": "1.1.10",
+    "@iconify-json/ph": "1.1.3",
+    "@iconify-json/twemoji": "1.1.6",
+    "@nuxtjs/color-mode": "3.2.0",
+    "@nuxtjs/partytown": "^1.2.2",
+    "@nuxtjs/tailwindcss": "6.1.3",
+    "@unocss/nuxt": "0.46.5",
+    "@vueuse/nuxt": "9.6.0",
+    "eslint": "8.28.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-vue": "9.8.0",
+    "nuxt": "3.0.0",
+    "nuxt-icon": "^0.1.7",
+    "prettier": "2.8.0",
+    "prettier-plugin-tailwindcss": "0.2.0",
+    "typescript": "4.9.3"
   }
 }
