--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nuxt-icon": "^0.1.7",
     "prettier": "2.8.0",
     "prettier-plugin-tailwindcss": "0.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
   }
 }
