--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@iconify-json/carbon": "1.1.11",
     "@iconify-json/ic": "1.1.10",
     "@iconify-json/ph": "1.1.3",
+    "@iconify-json/simple-icons": "^1.1.36",
     "@iconify-json/twemoji": "1.1.6",
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/partytown": "^1.2.2",
