--- a/package.json
+++ b/package.json
@@ -13,37 +13,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@headlessui/vue": "1.7.4",
+    "@headlessui/vue": "^1.7.4",
     "@huntersofbook/plausible-nuxt": "^0.5.2",
-    "@nuxtjs/i18n": "8.0.0-beta.4",
-    "@pinia/nuxt": "0.4.5",
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.3",
-    "@tailwindcss/line-clamp": "0.4.2",
-    "@tailwindcss/typography": "0.5.8",
-    "pinia": "2.0.26"
+    "@nuxtjs/i18n": "^8.0.0-beta.4",
+    "@pinia/nuxt": "^0.4.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
+    "pinia": "^2.0.26"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "0.31.0",
-    "@iconify-json/carbon": "1.1.11",
-    "@iconify-json/ic": "1.1.10",
-    "@iconify-json/ph": "1.1.3",
+    "@antfu/eslint-config": "^0.31.0",
+    "@iconify-json/carbon": "^1.1.11",
+    "@iconify-json/ic": "^1.1.10",
+    "@iconify-json/ph": "^1.1.3",
     "@iconify-json/simple-icons": "^1.1.36",
-    "@iconify-json/twemoji": "1.1.6",
+    "@iconify-json/twemoji": "^1.1.6",
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/partytown": "^1.2.2",
-    "@nuxtjs/tailwindcss": "6.1.3",
-    "@unocss/nuxt": "0.46.5",
-    "@vueuse/nuxt": "9.6.0",
-    "eslint": "8.28.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-vue": "9.8.0",
-    "nuxt": "3.0.0",
-    "nuxt-icon": "^0.1.7",
-    "prettier": "2.8.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@unocss/nuxt": "^0.46.5",
+    "@vueuse/nuxt": "^9.6.0",
+    "eslint": "^8.28.0",
+    "nuxt": "^3.0.0",
     "prettier-plugin-tailwindcss": "0.2.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.3"
+    "typescript": "^4.9.3"
   }
 }
